Signed-off-by: ShepaVS <dreamerz@ukr.net>

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ email: <a href="mailto:konotop1957@mail.ru" target="_blank">konotop1957@mail.ru<
 
 
     <p>
-      Частный предприниматель <span class="bgtable"> Конотоп Александр Васильевич (ЧП Конотоп) – производитель&nbsp<strong>воздушных винтов для сверхлегкиx летательных аппаратов</strong> (СЛА): самолетов, дельталетов, автожиров, парапланов в Луганске. Коллектив ЧП состоит из группы специалистов, которые</span> имеют многолетний опыт работы с композиционными материалами. </p>
+      Частный предприниматель <span class="bgtable"> Конотоп Александр Васильевич (ЧП Конотоп) – производитель&nbsp;<strong>воздушных винтов для сверхлегкиx летательных аппаратов</strong> (СЛА): самолетов, дельталетов, автожиров, парапланов в Луганске. Коллектив ЧП состоит из группы специалистов, которые</span> имеют многолетний опыт работы с композиционными материалами. </p>
 	<center>
 	<div class="modal fade" id="myModal">
         <div class="modal-dialog">
